# Compte-Jardin-Sauvage

./: README.md  config.js  index.html  package-lock.json  package.json  storage.js  ui.js
.github/workflows/: build.yml
app/: accounting.js  config.js  eddstore.js  index.html  reports.js  storage.js  ui.js
scripts/: bundle.js
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
tests/: test-bundle.js  test-reports.js  test-tauri.js  test-ui.js
