[package]
name = "edd-compta"
version = "1.0.9"
edition = "2021"

[lib]
name = "edd_compta_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
# pin time to avoid coherence conflict between tauri-utils 2.9.2 blanket From impls
# and time 0.3.42+ stricter trait impls under Rust 1.90+
time = { version = "=0.3.36", default-features = false }
